# sinking_real_estate

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: df_utils.py  eda.ipynb  geo_location.py
src/zap_imoveis/: account_fields.py  collect_listings.py  listing_fields.py  query_builder.py  search_params.py
