[project]
name = "sinking-real-estate"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "curl-cffi>=0.7.4",
    "fastexcel>=0.12.0",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "polars>=1.16.0",
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]
